--- a/project.config.json
+++ b/project.config.json
@@ -46,7 +46,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
-  "appid": "wxbb471a84c6966e0f",
+  "appid": "wx587336f04202797b",
   "projectname": "miniprogram-92",
   "condition": {},
   "editorSetting": {
